feat (usuario): listagem
